Fix spacing between content

--- a/css/main.css
+++ b/css/main.css
@@ -6,13 +6,11 @@
 
 html {
   box-sizing: border-box;
-
--moz-text-size-adjust: 100%;
--ms-text-size-adjust: 100%;
--webkit-text-size-adjust: 100%;
-text-size-adjust: 100%;
-
-font-family: Georgia, sans-serif
+  -moz-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%;
+  text-size-adjust: 100%;
+  font-family: Georgia, serif;
 }
 
 *, *::before, *::after {
